docs/v5.0.0rc/_sources/gallery/experiment/sphere/sphere_Qsca_vs_index.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/experiment/sphere/sphere_Qsca_vs_index.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_experiment_sphere_sphere_Qsca_vs_index.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_experiment_sphere_sphere_Qsca_vs_index.py:


Sphere: Qsca vs index
=====================

.. GENERATED FROM PYTHON SOURCE LINES 6-36



.. image-sg:: /gallery/experiment/sphere/images/sphx_glr_sphere_Qsca_vs_index_001.png
   :alt: sphere Qsca vs index
   :srcset: /gallery/experiment/sphere/images/sphx_glr_sphere_Qsca_vs_index_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Figure size 800x500 with 1 Axes>





|

.. code-block:: Python

    import numpy as np
    from PyMieSim.units import ureg

    from PyMieSim.experiment.scatterer_set import SphereSet
    from PyMieSim.experiment.source_set import GaussianSet
    from PyMieSim.experiment.polarization_set import PolarizationSet
    from PyMieSim.experiment import Setup

    polarization_set = PolarizationSet(
        angles=[30.0] * ureg.degree,
    )

    source = GaussianSet(
        wavelength=[500.0, 1000.0, 1500.0] * ureg.nanometer,
        polarization=polarization_set,
        optical_power=[1e-3] * ureg.watt,
        numerical_aperture=[0.2],
    )

    scatterer = SphereSet(
        diameter=[800.0] * ureg.nanometer,
        material=np.linspace(1.3, 1.9, 100),
        medium=[1.0],
    )

    experiment = Setup(scatterer_set=scatterer, source_set=source)

    dataframe = experiment.get("Qsca")

    dataframe.plot(x="scatterer:material")


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.169 seconds)


.. _sphx_glr_download_gallery_experiment_sphere_sphere_Qsca_vs_index.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: sphere_Qsca_vs_index.ipynb <sphere_Qsca_vs_index.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: sphere_Qsca_vs_index.py <sphere_Qsca_vs_index.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: sphere_Qsca_vs_index.zip <sphere_Qsca_vs_index.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
